ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websitestatic
  namespace: namespace-staticwebsite

spec:
  rules:
  - host: "my.staticwebsite"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-staticwebsite
            port:
              number: 80
